--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.1",
     "moment": "^2.27.0",
     "mongoose": "^5.9.25",
+    "nodemailer": "^6.9.13",
     "noty": "^3.2.0-beta",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
